--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <div class="container">
       <div class="row">
         <div class="col-xs-12 col-sm-12 col-md-12 jumbotron text-center" style="background-image: url('Belly-Button-Biodiversity.jpeg');
-        background-size: cover; background-position: center; color: black">
+        background-size: cover; background-position: center">
           <h1>Belly Button Biodiversity Dashboard</h1>
           <p>Use the interactive charts below to explore the dataset</p>
         </div>
